2009-08-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MobileProvision.cs: Fix search path.

2009-08-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MobileProvision.cs: Extract X509 certs from the binary blob.

2009-08-28  Michael Hutchinson  <mhutchinson@novell.com>

	* PropertyList/PlistDate.cs:
	* PropertyList/PlistDocument.cs: Add support for date
	  elements.

	* MonoDevelop.IPhone.csproj: Updated.

	* MobileProvision.cs: Class for reading .mobileprovision
	  files.

2009-08-26  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Don't generate partial classes for
	  classes that are referenced from other nibs.

2009-08-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneViewController.xft.xml: Add an
	  initWithCoder/NSCoder ctor. Put ctors in a region.

2009-08-25  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Output xcodeproj generation args in a log
	  message. Make all res IDs explicit.

	* gtk-gui/generated.cs: Flush generated code.

2009-08-25  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Fix build.

2009-08-25  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Pass refs and extra mtouch args to
	  xcodeproj generator. Also include xibs as resources, and
	  include relative path info for all resources.

2009-08-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* Icons/32x32/xib-template-window.png:
	* Icons/32x32/xib-template-application.png: Window/application
	  were the wrong way round. Fix.

2009-08-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.addin.xml: Use correct size for icon.

2009-08-24  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Change access of generated members
	  to private.

2009-08-24  Michael Hutchinson  <mhutchinson@novell.com>

	* Icons/32x32:
	* Icons/22x22:
	* Icons/48x48:
	* Icons/16x16:
	* Icons/24x24:
	* Icons/256x256: